# Conduit

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EPICS.md  README.md
.beads/: issues.jsonl  metadata.json
.sqlx/: query-01b017fc5529fe006431c1630c7891c0262653b94b726b043e0435583f077a5a.json  query-01b143814086ee13fd643cd44906f5d799d39e14f847efe5e8d1727f03381a2e.json  query-01bc4924ce4832365c2d9afbab614449cade9fc7f0b1ba136c1e522c338196b8.json  query-047557480de15ec3e2dbee4fdd0c0226a7c1ffd49579ee631258ff17c41db7bd.json  query-0b7feb5a1f59c2c6f7efd0243da9af671e4b5f061baf053f2f7e3163383cdb38.json  query-0d879cbe20763735aa6b1af74a34d23ff55c5f2fbc3658baf2b873b889be67f1.json  query-0fb7e982fdbcf598f5634e32e9dbe32bb9541e830abdd03cd027275288253ab8.json  query-12c1921e036b9a2ffd2fc39b1d7096004f89ad5da2c7d7d89a9acdfc0f7032e1.json  query-12e4d2e4c1cf2778951179289b137e9ec05b5d184c21cb8299c3f5009aaa9d0a.json  query-13cc561b5b920f37d75d7edc7045b033b52526dc69711558692ca44ef0824372.json  query-164ba03b6f44608f75f69072cd0c5aa3d2f1bb2d797fd9f8fcdf1628da033871.json  query-16f3e047ecc0bed38eda517f543fad249b641ba4fd033c347964e4cc292323e5.json  query-1a7a46596130f330e66f730b6aaa9071fa7dceef8a67811c303aca92e8571e46.json  query-1a8a5ca285b19a5251b26d97d4ed2d84d9e538ad8047c5fba4a66e1009545cf7.json  query-1f2c801cf8b1e294e58dcadc915699db0b8081008bd564cac4ac8b9f753c6537.json  query-21814686716fa15332f4093128e0c504edce47bac772dd870f488f36dccee7bd.json  query-2390195ef64c79d8b23b665398c5c35a5dfae599afb4b3bf906dbb83ecd8dda6.json  query-241c9589ef4b3337d4a9f8f2c7f903ad50886cc7f2e4bb500bca7dd669706d48.json  query-26cbd8d4b7b37910577fcf68b0bc49ff5069b980776a6962688b70cff1aa3331.json  query-27fe1b6c057a6c9a576e7ef4af83bf3edc1cbff0dcbe4ca2b209fb7eb2671148.json  query-2aec7a53feab30000268ffc6c7a07b19681f61b8974a5da5e019b0f9599c40cb.json  query-346740971e6356b3f99b1ce2314453270e3bf1719f5fcfe46fc18d851a1a1b76.json  query-3653ee2c797a5df976e84ee8865844b840cb8f2e74f5b861e64a1e0ad53a54c1.json  query-3aadc2a506ae80cb357dc4446307d593d220d4222a66124ac4182873c5513252.json  query-3c6906dbb95dbb2b12767d66018fb8af939ab86d27c8a19f3c38f84eb989ccf9.json  query-4027f61c84bee9fdec674a2add06cd97bfa28cf5b33193a7b1e5fd52b0e9dd67.json  query-47b995385f9782ba838e6045ffbf34f872b5c18f68186f3500e1e5cf257fddce.json  query-4b1e721ca04603784b0611350fdc0f2b2e157c2a39f2d618935fb499fa0ee11d.json  query-512c2f0505fc37470b108b715b205f0773109af11b41650ea6f789bb26271208.json  query-52e5b420d2e32e25e229dd470f54654238f5468fa361bfae3dc0caec89ad1c06.json  query-53ddb47b74b72b4d0f0b85d87161047485f6d4771f6c72a13b592e4cc3585c08.json  query-549360eadb2a8bd133e401617cbfdd22f062e14e9e99e5a7fdc4c85ac727aa34.json  query-554d270d372435dd89b01d930d0635af97ac6a3e678d4e48cdb0a72a2b44d322.json  query-5a44f5ab16d19b93873b17fd73ba21e02f96553f437f8ba9327b1af38709b9e5.json  query-5e1f1ff8d71af4f84790f1d184e21337ebb4d520246d936521cdccb83fbeb895.json  query-5fb432918734c19be458647d05f1b67501492869a10053773d816833e243fd61.json  query-63a20a3af671e6f09a81a3a00e231bc49eb8d11dbef32d5c15225959053ddf90.json  query-63cc0ea06a657c1382091d294a0ee06dbe782eab2a47f670a85946aab4c5f59d.json  query-66362e4b24f5466f6b7dbc47fc93979094b8e91cf06392eb8851949a983534f4.json  query-6d3854bc4f80c1ca261bfedb11414d3a924f23df2d00ea8d04261f8e32b84a7f.json  (+60 more)
conduit/: Cargo.toml
conduit-server/: Cargo.toml
conduit-server/migrations/: 0001_initial.sql  0002_e2ee.sql  0003_presence.sql  0004_media.sql  0005_push_as_admin.sql  0006_fed_outbound_queue.sql  0007_room_aliases.sql
conduit-server/src/: app_service.rs  keys.rs  lib.rs  main.rs  media_storage.rs  push_worker.rs  remote_keys.rs  storage_pg.rs
conduit-server/src/api/: admin.rs  mod.rs
conduit-server/src/api/client/: account_data.rs  directory.rs  event_pipeline.rs  keys.rs  media.rs  mod.rs  presence.rs  probe.rs  profile.rs  push.rs  rate_limit.rs  receipts.rs  rooms.rs  sync.rs  typing.rs  uia.rs
conduit-server/src/api/client/push/: rules.rs
conduit-server/src/federation/: auth.rs  client.rs  discovery.rs  iroh_client.rs  iroh_server.rs  middleware.rs  mod.rs  pipeline.rs  queue.rs  rate_limit.rs  recent.rs  server.rs
conduit-server/tests/: admin.rs  app_services.rs  auth.rs  e2e.rs  e2ee.rs  federation.rs  federation_inbound.rs  federation_roundtrip.rs  iroh_roundtrip.rs  media.rs  presence.rs  push.rs  remote_keys.rs  rooms.rs  storage_pg.rs  sync.rs
conduit/src/: api.rs  auth.rs  canonical_json.rs  config.rs  error.rs  event.rs  hashing.rs  keys.rs  lib.rs  signing.rs  state_events.rs  storage.rs
conduit/src/room/: mod.rs  state_res.rs
conduit/src/transport/: iroh.rs  mod.rs
docs/: README.md  architecture.md  element-bringup.md
docs/features/: admin.md  app-services.md  auth-and-state.md  client-server-api.md  e2ee.md  events-and-signing.md  federation.md  iroh-transport.md  media.md  presence-layer.md  push.md  state-resolution.md  storage.md
epics/: E01-storage.md  E02-events-and-signing.md  E03-auth-and-state.md  E04-local-chat-mvp.md  E05-state-resolution.md  E06-presence-layer.md  E07-media.md  E08-federation-outbound.md  E09-federation-inbound.md  E10-e2ee.md  E11-push-as-admin.md  E12-iroh-transport.md
