[package]
name = "conduit-server"
description = "A basic webserver around the `conduit` library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
iroh = ["conduit/iroh"]

[dependencies]
conduit = { path = "../conduit" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hickory-resolver = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
