[package]
name = "conduit"
description = "A Matrix homeserver, as a pure library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Gate the iroh-based P2P transport. Currently fronts a stub module; when
# you wire up the real transport, add `iroh` to [dependencies] and change
# this to `iroh = ["dep:iroh"]`. Linking iroh adds roughly 30MB.
iroh = []

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
