[package]
name = "conduit"
description = "A Matrix homeserver, as a pure library."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
# Gate the iroh-based P2P transport.  Linking iroh adds roughly 30MB.
iroh = ["dep:iroh"]

[dependencies]
iroh = { workspace = true, optional = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
